feat: find stock by book id
